# mock-identity-provider

./: Cargo.toml  Directory.Packages.props  Dockerfile  MockIdentityProvider.sln  MockIdentityProvider.slnx  README.md  config.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: chart.yml  docker.yml  release.yml
MockIdentityProvider/: Dockerfile  MockIdentityProvider.csproj  Program.cs  appsettings.json
MockIdentityProvider/Html/: HtmlResponse.cs  IndexPage.html.cs  UserSelectionPage.cs
MockIdentityProvider/Html/Templates/: Index.scriban  UserSelectionPage.scriban
MockIdentityProvider/Models/: MockUser.cs
MockIdentityProvider/OpenIddict/: EventHandlerRegistration.cs  MockOpenIddictExtensions.cs
MockIdentityProvider/OpenIddict/Factory/: ClaimsPrincipalFactory.cs
MockIdentityProvider/OpenIddict/Handler/: AuthorizationHandler.cs  TokenHandler.cs  UserInfoHandler.cs
MockIdentityProvider/OpenIddict/Settings/: MockIdpSettings.cs
MockIdentityProvider/Properties/: launchSettings.json
MockIdentityProvider/wwwroot/: index.html  inspect.html
charts/mock-identity-provider/: Chart.yaml  values.yaml
charts/mock-identity-provider/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
www/: authorize.html  error.html  index.html  inspect.html
www/css/: style.css
www/js/: authorize.js  error.js  index.js  inspect.js
(+1 files in other folders)
