[package]
name = "mock-identity-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9" }
axum-tracing-opentelemetry = { version = "0.33", features = [
    "tracing_level_info",
] }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.44" }
openidconnect = { version = "4.0.1", features = [
    "rustls-tls",
], default-features = false }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "http-proto",
    "trace",
    "reqwest-blocking-client",
    "reqwest-rustls-webpki-roots",
] }
rsa = { version = "0.9.10" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.10", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-opentelemetry = { version = "0.32" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
